--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,8 @@ buildscript {
         }
 
         maven {
-            url = uri('../../../maven-repo');
+            name="onkiup"
+            url = "https://raw.github.com/chedim/maven-repo/master/";
         }
     }
     dependencies {
