--- a/build.gradle
+++ b/build.gradle
@@ -14,19 +14,19 @@ buildscript {
 
         maven {
             name="onkiup"
-            url = "https://raw.github.com/chedim/maven-repo/master/";
+//            url = "https://raw.github.com/chedim/maven-repo/master/";
+            url = '../../../maven-repo'
         }
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
-        classpath 'com.onkiup.gradle:minedroid:1.1-SNAPSHOT'
+        classpath 'com.onkiup.gradle:minedroid:1.2-SNAPSHOT'
     }
 }
 
 apply plugin: 'forge'
-apply plugin: 'minedroid'
 
-version = "1.0"
+version = "1.0.2"
 group = "com.onkiup.minedroid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "minedroid"
 
